modified:   src/Controller/Reporting/ProjectDetailsController.php 	modified:   src/Project/ProjectStatisticService.php 	deleted:    src/Reporting/ProjectDetails/ActivityDetailsForm.php 	deleted:    src/Reporting/ProjectDetails/ActivityDetailsQuery.php 	modified:   src/Reporting/ProjectDetails/ProjectDetailsForm.php 	modified:   src/Reporting/ProjectDetails/ProjectDetailsQuery.php 	deleted:    src/Reporting/ProjectDetails/UserDetailsForm.php 	deleted:    src/Reporting/ProjectDetails/UserDetailsQuery.php 	modified:   templates/reporting/project_details.html.twig

--- a/templates/reporting/project_details.html.twig
+++ b/templates/reporting/project_details.html.twig
@@ -82,14 +82,12 @@
         // Function to save the active tab to local storage
             function saveActiveTab(event) {
                 let activeTab = event.target.getAttribute('href');
-                console.log(activeTab);
-                localStorage.setItem('activeTab', activeTab);
+                sessionStorage.setItem('activeTab', activeTab);
             }
 
             // Function to delete the saved active tab from local storage
             function deleteActiveTab() {
-                localStorage.removeItem('activeTab');
-                console.log('Selected field!');
+                sessionStorage.removeItem('activeTab');
             }
 
             // Attach the click event to all tab links
@@ -105,7 +103,7 @@
             });
 
             function setActiveTab() {
-                let activeTab = localStorage.getItem('activeTab');
+                let activeTab = sessionStorage.getItem('activeTab');
                 if (activeTab) {
                     let tabLink = document.querySelector(`.nav-tabs a[href="${activeTab}"]`);
                     if (tabLink) {
